All spacing fixed

--- a/public/output.css
+++ b/public/output.css
@@ -645,6 +645,10 @@ video {
   margin-top: 0.75rem;
 }
 
+.mt-1{
+  margin-top: 0.25rem;
+}
+
 .block{
   display: block;
 }
@@ -949,6 +953,11 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.py-3{
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
 .pb-1{
   padding-bottom: 0.25rem;
 }
@@ -1222,6 +1231,10 @@ b {
     margin-top: 0px;
   }
 
+  .md\:block{
+    display: block;
+  }
+
   .md\:inline{
     display: inline;
   }
@@ -1256,6 +1269,10 @@ b {
 
   .md\:cursor-pointer{
     cursor: pointer;
+  }
+
+  .md\:justify-start{
+    justify-content: flex-start;
   }
 
   .md\:justify-end{
